Add missing header include

--- a/imgui.ini
+++ b/imgui.ini
@@ -23,3 +23,13 @@ Pos=10,10
 Size=158,65
 Collapsed=0
 
+[Window][Motion Clip Player]
+Pos=13,165
+Size=201,94
+Collapsed=0
+
+[Window][PoseTree Debug]
+Pos=14,279
+Size=318,684
+Collapsed=0
+
