Implement simple pose animation by keyframing and interpolation

--- a/demo/imgui.ini
+++ b/demo/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Simple Overlay]
-Pos=10,10
-Size=149,46
+Pos=10,30
+Size=179,45
+Collapsed=0
+
+[Window][Human Control]
+Pos=66,144
+Size=480,829
 Collapsed=0
 
