Completed jumping jack

--- a/demo/imgui.ini
+++ b/demo/imgui.ini
@@ -5,11 +5,16 @@ Collapsed=0
 
 [Window][Simple Overlay]
 Pos=10,30
-Size=179,45
+Size=203,68
 Collapsed=0
 
 [Window][Human Control]
 Pos=66,144
 Size=480,829
+Collapsed=0
+
+[Window][PhongRenderer Settings]
+Pos=1620,35
+Size=285,269
 Collapsed=0
 
