Initial impl of IK

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -23,3 +23,9 @@ add_executable(gengine_demo_hw2_bvh hw2-bvh.cpp)
 target_include_directories(gengine_demo_hw2_bvh PUBLIC gengine)
 target_link_libraries(gengine_demo_hw2_bvh gengine)
 add_dependencies(gengine_demo_hw2_bvh copy_resource_folder)
+
+add_executable(gengine_demo_hw3_ik hw3-ik.cpp)
+target_include_directories(gengine_demo_hw3_ik PUBLIC gengine)
+target_link_libraries(gengine_demo_hw3_ik gengine)
+add_dependencies(gengine_demo_hw3_ik copy_resource_folder)
+
