--- a/gengine/CMakeLists.txt
+++ b/gengine/CMakeLists.txt
@@ -60,7 +60,7 @@ add_library(gengine STATIC ${RENDER_SOURCES})
 # include/linking
 target_include_directories(gengine
         PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(gengine Threads::Threads SDL2 glad imgui stb glm tinyxml2 span-lite ezc3d)
+target_link_libraries(gengine Threads::Threads SDL2 glad imgui stb glm eigen tinyxml2 span-lite ezc3d)
 
 # Compile shaders into header files
 add_executable(embed_shader shaders/embed_shader.cpp)
