--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "gengine/deps/ezc3d"]
 	path = gengine/deps/ezc3d
 	url = https://github.com/lasagnaphil/ezc3d
+[submodule "gengine/deps/pybind11"]
+	path = gengine/deps/pybind11
+	url = https://github.com/pybind/pybind11.git
