--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -14,10 +14,10 @@ target_include_directories(gengine_demo_trackball PUBLIC gengine)
 target_link_libraries(gengine_demo_trackball gengine)
 add_dependencies(gengine_demo_trackball copy_resource_folder)
 
-add_executable(gengine_demo_boxes_pbr boxes-pbr.cpp)
-target_include_directories(gengine_demo_boxes_pbr PUBLIC gengine)
-target_link_libraries(gengine_demo_boxes_pbr gengine)
-add_dependencies(gengine_demo_boxes_pbr copy_resource_folder)
+add_executable(gengine_demo_spheres_pbr spheres-pbr.cpp)
+target_include_directories(gengine_demo_spheres_pbr PUBLIC gengine)
+target_link_libraries(gengine_demo_spheres_pbr gengine)
+add_dependencies(gengine_demo_spheres_pbr copy_resource_folder)
 
 add_executable(gengine_demo_hw1_human hw1-human.cpp)
 target_include_directories(gengine_demo_hw1_human PUBLIC gengine)
