--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "gengine/deps/imgui"]
 	path = gengine/deps/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "gengine/deps/fmt"]
+	path = gengine/deps/fmt
+	url = https://github.com/fmtlib/fmt.git
