Start implementing plotting

--- a/gengine/CMakeLists.txt
+++ b/gengine/CMakeLists.txt
@@ -67,7 +67,8 @@ endif()
 file(GLOB GENGINE_SOURCES *.cpp)
 file(GLOB GENGINE_GLMX_SOURCES glmx/*.cpp)
 file(GLOB GENGINE_PHYSX_SOURCES physx/*.cpp)
-add_library(gengine STATIC ${GENGINE_SOURCES} ${GENGINE_GLMX_SOURCES})
+file(GLOB GENGINE_PLOT_SOURCES plot/*.cpp)
+add_library(gengine STATIC ${GENGINE_SOURCES} ${GENGINE_GLMX_SOURCES} ${GENGINE_PLOT_SOURCES})
 
 if (GENGINE_ENABLE_PHYSX)
     add_library(gengine STATIC ${GENGINE_PHYSX_SOURCES})
