--- a/gengine/CMakeLists.txt
+++ b/gengine/CMakeLists.txt
@@ -68,10 +68,11 @@ file(GLOB GENGINE_SOURCES *.cpp)
 file(GLOB GENGINE_GLMX_SOURCES glmx/*.cpp)
 file(GLOB GENGINE_PHYSX_SOURCES physx/*.cpp)
 file(GLOB GENGINE_PLOT_SOURCES plot/*.cpp)
-add_library(gengine STATIC ${GENGINE_SOURCES} ${GENGINE_GLMX_SOURCES} ${GENGINE_PLOT_SOURCES})
 
 if (GENGINE_ENABLE_PHYSX)
-    add_library(gengine STATIC ${GENGINE_PHYSX_SOURCES})
+    add_library(gengine STATIC ${GENGINE_SOURCES} ${GENGINE_GLMX_SOURCES} ${GENGINE_PLOT_SOURCES} ${GENGINE_PHYSX_SOURCES})
+else()
+    add_library(gengine STATIC ${GENGINE_SOURCES} ${GENGINE_GLMX_SOURCES} ${GENGINE_PLOT_SOURCES})
 endif()
 
 # include/linking
