--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "gengine/deps/bitsery"]
 	path = gengine/deps/bitsery
 	url = https://github.com/fraillt/bitsery
+[submodule "gengine/deps/rttr"]
+	path = gengine/deps/rttr
+	url = https://github.com/rttrorg/rttr
