Update for deepmimic dev

--- a/demo/imgui.ini
+++ b/demo/imgui.ini
@@ -23,3 +23,13 @@ Pos=60,60
 Size=386,188
 Collapsed=0
 
+[Window][Anim State Machine]
+Pos=57,606
+Size=327,639
+Collapsed=0
+
+[Window][Character Data]
+Pos=60,60
+Size=360,526
+Collapsed=0
+
