--- a/gengine/CMakeLists.txt
+++ b/gengine/CMakeLists.txt
@@ -75,12 +75,13 @@ file(GLOB GENGINE_GLMX_SOURCES glmx/*.cpp)
 file(GLOB GENGINE_PHYSX_SOURCES physx/*.cpp)
 file(GLOB GENGINE_PLOT_SOURCES plot/*.cpp)
 file(GLOB GENGINE_SERIALIZE_SOURCES serialize/*.cpp)
+file(GLOB GENGINE_ANIM_SOURCES anim/*.cpp)
 
 if (GENGINE_ENABLE_PHYSX)
-    add_library(gengine STATIC ${GENGINE_SOURCES} ${GENGINE_GLMX_SOURCES} ${GENGINE_PLOT_SOURCES} ${GENGINE_SERIALIZE_SOURCES}
+    add_library(gengine STATIC ${GENGINE_SOURCES} ${GENGINE_GLMX_SOURCES} ${GENGINE_PLOT_SOURCES} ${GENGINE_SERIALIZE_SOURCES} ${GENGINE_ANIM_SOURCES}
             ${GENGINE_PHYSX_SOURCES})
 else()
-    add_library(gengine STATIC ${GENGINE_SOURCES} ${GENGINE_GLMX_SOURCES} ${GENGINE_PLOT_SOURCES} ${GENGINE_SERIALIZE_SOURCES})
+    add_library(gengine STATIC ${GENGINE_SOURCES} ${GENGINE_GLMX_SOURCES} ${GENGINE_PLOT_SOURCES} ${GENGINE_SERIALIZE_SOURCES} ${GENGINE_ANIM_SOURCES})
 endif()
 
 # include/linking
