update for motion-editing repo

--- a/gengine/CMakeLists.txt
+++ b/gengine/CMakeLists.txt
@@ -32,12 +32,6 @@ set(TINYXML2_DIR ${CMAKE_CURRENT_SOURCE_DIR}/deps/tinyxml2)
 add_library(tinyxml2 STATIC ${TINYXML2_DIR}/tinyxml2.cpp)
 target_include_directories(tinyxml2 PUBLIC ${TINYXML2_DIR})
 
-# span-lite
-set(SPAN_LITE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/deps/span-lite)
-add_library(span-lite INTERFACE)
-target_include_directories(span-lite INTERFACE ${SPAN_LITE_DIR})
-
-
 # Add the source files to the library
 file(GLOB RENDER_SOURCES *.cpp)
 add_library(gengine STATIC ${RENDER_SOURCES})
@@ -48,7 +42,7 @@ add_library(gengine STATIC ${RENDER_SOURCES})
 # include/linking
 target_include_directories(gengine
         PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(gengine ${CMAKE_DL_LIBS} Threads::Threads SDL2 glad imgui stb glm tinyxml2 span-lite)
+target_link_libraries(gengine ${CMAKE_DL_LIBS} Threads::Threads SDL2 glad imgui stb glm tinyxml2)
 
 # Compile shaders into header files
 add_executable(embed_shader embed_shader.cpp)
